Update line height to fix button text alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,6 @@
-@media screen and (min-width: 768px) {
-  :root {
-    font-size: 0.9375rem;
-  }
-}
-
 :root {
+  line-height: 1.35;
+
   --background: 236 239 244;
   --background-light: 248 250 252;
   --background-lighter: 236 239 244;
@@ -64,6 +60,13 @@ html,
 body {
   @apply font-sans;
   @apply text-base;
+}
+
+@media screen and (min-width: 768px) {
+  :root {
+    font-size: 0.9375rem;
+    line-height: 1.4;
+  }
 }
 
 #pwa-install {
